<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Contacts</string>
    <string name="action_settings">设置</string>
    <string name="action_about">关于</string>
    <string name="action_search">询</string>
    <string name="action_add">添加联系人</string>
    <string name="action_modify">修改联系人</string>
    <string name="action_delete">删除联系人</string>
    <string name="action_share">分享联系人</string>
	<string name="order_type">排序方式:</string>
	<string name="letter_order_type">首字母排序:</string>
	<string name="name_order_type">姓氏排序:</string>
	<string name="team_textview">群组</string>
	<string-array name="number_type" >
        <item >手机</item>
        <item >工作</item>
        <item >家庭</item>
	</string-array> 
	
</resources>
