<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.xiaodevil.contacts.MainActivity" >

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="1"
        android:title="@string/action_settings"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_about"
        android:orderInCategory="2"
        android:title="@string/action_about"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_add"
        android:orderInCategory="3"
        android:title="@string/action_add"
        app:showAsAction="never"/>
    
    <item android:id="@+id/action_search"
          android:icon="@drawable/abc_ic_search_api_mtrl_alpha"
          android:title="@string/action_search"
          app:actionViewClass="android.support.v7.widget.SearchView"
          app:showAsAction="collapseActionView|ifRoom"
         />
    

</menu>
